tests/algorithms/x/C/other/number_container_system.c
// Generated by Mochi 0.10.32 on 2025-08-12 10:04 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t remove_at_len;
size_t insert_at_len;
size_t binary_search_delete_len;
size_t binary_search_insert_len;

static int contains_map_int(const int keys[], size_t len, int key) {
    for (size_t i = 0; i < len; i++) {
        if (keys[i] == key) return 1;
    }
    return 0;
}

typedef struct { int *keys; void **vals; size_t *lens; size_t len; size_t cap; } MapIL;

static int map_get_ii(const int keys[], const int vals[], size_t len, int key) {
    for (size_t i = 0; i < len; i++) {
        if (keys[i] == key) return vals[i];
    }
    return 0;
}

static void* map_get_il(const int keys[], void *vals[], const size_t lens[], size_t len, int key, size_t *out_len) {
    for (size_t i = 0; i < len; i++) {
        if (keys[i] == key) { if (out_len) *out_len = lens[i]; return vals[i]; }
    }
    if (out_len) *out_len = 0;
    return NULL;
}

static void map_set_il(int keys[], void *vals[], size_t lens[], size_t *len, int key, void *val, size_t val_len) {
    for (size_t i = 0; i < *len; i++) {
        if (keys[i] == key) { vals[i] = val; lens[i] = val_len; return; }
    }
    keys[*len] = key; vals[*len] = val; lens[*len] = val_len; (*len)++;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

typedef struct NumberContainer NumberContainer;

struct NumberContainer {
    MapIL numbermap;
    MapII indexmap;
};

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

NumberContainer cont;

long long * remove_at(long long * xs, size_t xs_len, long long idx);
long long * insert_at(long long * xs, size_t xs_len, long long idx, long long val);
long long * binary_search_delete(long long * array, size_t array_len, long long item);
long long * binary_search_insert(long long * array, size_t array_len, long long index);
NumberContainer change(NumberContainer cont, long long idx, long long num);
long long find(NumberContainer cont, long long num);
int main(void);

long long * remove_at(long long * xs, size_t xs_len, long long idx) {
    long long *res = NULL;
    size_t res_len = 0;
    long long i = 0LL;
    while (i < xs_len) {
        if (i != idx) {
            res = list_append_long_long(res, &res_len, xs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})]);
        }
        i = i + 1LL;
    }
    return remove_at_len = res_len, res;
}

long long * insert_at(long long * xs, size_t xs_len, long long idx, long long val) {
    long long *res = NULL;
    size_t res_len = 0;
    long long i = 0LL;
    while (i < xs_len) {
        if (i == idx) {
            res = list_append_long_long(res, &res_len, val);
        }
        res = list_append_long_long(res, &res_len, xs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})]);
        i = i + 1LL;
    }
    if (idx == xs_len) {
        res = list_append_long_long(res, &res_len, val);
    }
    return insert_at_len = res_len, res;
}

long long * binary_search_delete(long long * array, size_t array_len, long long item) {
    long long low = 0LL;
    long long high = array_len - 1LL;
    long long *arr = array;
    size_t arr_len = array_len;
    while (low <= high) {
        long long mid = (low + high) / 2LL;
        if (arr[(int)({long long _mochi_idx = mid; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})] == item) {
            arr = remove_at(arr, arr_len, mid);
            arr_len = remove_at_len;
            return binary_search_delete_len = arr_len, arr;
        } else {
            if (arr[(int)({long long _mochi_idx = mid; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})] < item) {
                low = mid + 1LL;
            } else {
                high = mid - 1LL;
            }
        }
    }
    puts("ValueError: Either the item is not in the array or the array was unsorted");
    return binary_search_delete_len = arr_len, arr;
}

long long * binary_search_insert(long long * array, size_t array_len, long long index) {
    long long low = 0LL;
    long long high = array_len - 1LL;
    long long *arr = array;
    size_t arr_len = array_len;
    while (low <= high) {
        long long mid = (low + high) / 2LL;
        if (arr[(int)({long long _mochi_idx = mid; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})] == index) {
            arr = insert_at(arr, arr_len, mid + 1LL, index);
            arr_len = insert_at_len;
            return binary_search_insert_len = arr_len, arr;
        } else {
            if (arr[(int)({long long _mochi_idx = mid; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})] < index) {
                low = mid + 1LL;
            } else {
                high = mid - 1LL;
            }
        }
    }
    arr = insert_at(arr, arr_len, low, index);
    arr_len = insert_at_len;
    return binary_search_insert_len = arr_len, arr;
}

NumberContainer change(NumberContainer cont, long long idx, long long num) {
    MapIL numbermap = cont.numbermap;
    size_t numbermap_len = cont.numbermap.len;
    MapII indexmap = cont.indexmap;
    size_t indexmap_len = cont.indexmap.len;
    if (idx in indexmap) {
        long long old = map_get_ii(indexmap.keys, indexmap.vals, indexmap.len, idx);
        int *indexes = map_get_il(numbermap_keys, numbermap_vals, numbermap_lens, numbermap_len, old, NULL);
        size_t indexes_len = numbermap_lens[old];
        if (indexes_len == 1LL) {
            map_set_il(numbermap_keys, numbermap_vals, numbermap_lens, &numbermap_len, old, NULL, 0);
        } else {
            map_set_il(numbermap_keys, numbermap_vals, numbermap_lens, &numbermap_len, old, binary_search_delete(indexes, indexes_len, idx), binary_search_delete_len);
        }
    }
    indexmap[(int)(idx)] = num;
    if (contains_map_int(numbermap.keys, numbermap.len, num)) {
        map_set_il(numbermap_keys, numbermap_vals, numbermap_lens, &numbermap_len, num, binary_search_insert(map_get_il(numbermap_keys, numbermap_vals, numbermap_lens, numbermap_len, num, NULL), numbermap_lens[num], idx), binary_search_insert_len);
    } else {
        map_set_il(numbermap_keys, numbermap_vals, numbermap_lens, &numbermap_len, num, ({long long *tmp = malloc(1 * sizeof(long long)); tmp[0] = idx; tmp;}), 1);
    }
    return (NumberContainer){.numbermap = numbermap, .indexmap = indexmap};
}

long long find(NumberContainer cont, long long num) {
    MapIL numbermap = cont.numbermap;
    size_t numbermap_len = cont.numbermap.len;
    if (contains_map_int(numbermap.keys, numbermap.len, num)) {
        int *arr = map_get_il(numbermap_keys, numbermap_vals, numbermap_lens, numbermap_len, num, NULL);
        size_t arr_len = numbermap_lens[num];
        if (arr_len > 0LL) {
            return arr[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})];
        }
    }
    return -1LL;
}

int main(void) {
    {
        long long __start = _now();
        static int nm_keys[16] = {};
        static void* nm_vals[16] = {};
        static size_t nm_lens[16] = {};
        size_t nm_len = 0;
        MapIL nm = { nm_keys, nm_vals, nm_lens, 0, 16 };
        static int im_keys[16] = {};
        static int im_vals[16] = {};
        size_t im_len = 0;
        cont = (NumberContainer){.numbermap = nm, .indexmap = im};
        printf("%d\n", find(cont, 10LL));
        cont = change(cont, 0LL, 10LL);
        printf("%d\n", find(cont, 10LL));
        cont = change(cont, 0LL, 20LL);
        printf("%d\n", find(cont, 10LL));
        printf("%d\n", find(cont, 20LL));
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
